# ChangeLog for dev-util/scons
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/scons/ChangeLog,v 1.95 2011/01/29 16:28:43 grobian Exp $

  29 Jan 2011; Fabian Groffen <grobian@gentoo.org> scons-2.0.1.ebuild:
  Transfer Prefix keywords

  27 Dec 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -scons-1.3.0_p20100501.ebuild:
  Delete.

  27 Dec 2010; Brent Baude <ranger@gentoo.org> scons-2.0.1.ebuild:
  Marking scons-2.0.1 ppc64 for bug 339531

  19 Nov 2010; Markus Meier <maekke@gentoo.org> scons-2.0.1.ebuild:
  add ~arm, bug #343791

  24 Oct 2010; Raúl Porcel <armin76@gentoo.org> scons-2.0.1.ebuild:
  alpha/ia64/sparc stable wrt #339531

  21 Oct 2010; Jeroen Roovers <jer@gentoo.org> scons-2.0.1.ebuild:
  Stable for HPPA (bug #339531).

  20 Oct 2010; Brent Baude <ranger@gentoo.org> scons-2.0.1.ebuild:
  stable ppc, bug 339531

  10 Oct 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> scons-2.0.1.ebuild:
  x86 stable wrt bug #339531

  06 Oct 2010; Markos Chandras <hwoarang@gentoo.org> scons-2.0.1.ebuild:
  Stable on amd64 wrt bug #339531

  13 Sep 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -scons-1.2.0-r1.ebuild, -scons-1.2.0_p20091224.ebuild,
  -files/scons-1.2.0-links.patch:
  Delete.

*scons-2.0.1 (29 Aug 2010)

  29 Aug 2010; Jesus Rivero <neurogeek@gentoo.org> +scons-2.0.1.ebuild:
  Version bump. Thanks again to Johan. Closes bug #326867

  22 Aug 2010; Jeroen Roovers <jer@gentoo.org> scons-1.3.0_p20100501.ebuild:
  Stable for HPPA (bug #326241).

  13 Aug 2010; Joseph Jezak <josejx@gentoo.org>
  scons-1.3.0_p20100501.ebuild:
  Marked ppc stable for bug #326241.

  18 Jul 2010; Samuli Suominen <ssuominen@gentoo.org>
  scons-1.3.0_p20100501.ebuild:
  ppc64 stable wrt #326241

  18 Jul 2010; Raúl Porcel <armin76@gentoo.org>
  scons-1.3.0_p20100501.ebuild:
  alpha/ia64/sparc stable wrt #326241

  10 Jul 2010; Christian Faulhammer <fauli@gentoo.org>