@@ -1,6 +1,11 @@
 # ChangeLog for dev-util/scons
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/scons/ChangeLog,v 1.95 2011/01/29 16:28:43 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/scons/ChangeLog,v 1.96 2011/07/19 15:41:51 neurogeek Exp $
+
+*scons-2.0.1-r1 (19 Jul 2011)
+
+  19 Jul 2011; Jesus Rivero <neurogeek@gentoo.org> +scons-2.0.1-r1.ebuild:
+  Python related improvements. Closes bug #367049. Thanks to Mike Gilbert
 
   29 Jan 2011; Fabian Groffen <grobian@gentoo.org> scons-2.0.1.ebuild:
   Transfer Prefix keywords
